# ImCtrl

./: CMakeLists.txt  README.md
include/ImCtrl/: app.hpp  image.hpp  image_loader.hpp  renderer.hpp  types.hpp
src/: CMakeLists.txt  app.cpp  image.cpp  image_loader.cpp  main.cpp  renderer.cpp  resource.rc
