cmake_minimum_required(VERSION 3.26...3.31)
project(
    ImCtrl
    LANGUAGES CXX)

# Customise SDL build options.
set(SDL_AUDIO OFF)
set(SDL_VIDEO ON)
set(SDL_GPU ON)
set(SDL_RENDER ON)
set(SDL_CAMERA OFF)
set(SDL_JOYSTICK ON)
set(SDL_HAPTIC ON)
set(SDL_HIDAPI ON)
set(SDL_POWER ON)
set(SDL_SENSOR ON)
set(SDL_DIALOG ON)
add_subdirectory(extern/SDL)

# Customise SDL_image build options.
set(SDLIMAGE_AVIF OFF)
set(SDLIMAGE_BMP OFF)
set(SDLIMAGE_GIF ON)
set(SDLIMAGE_JPG ON)
set(SDLIMAGE_JXL OFF)
set(SDLIMAGE_LBM OFF)
set(SDLIMAGE_PCX OFF)
set(SDLIMAGE_PNG ON)
set(SDLIMAGE_PNM OFF)
set(SDLIMAGE_QOI OFF)
set(SDLIMAGE_SVG OFF)
set(SDLIMAGE_TGA OFF)
set(SDLIMAGE_TIF OFF)
set(SDLIMAGE_WEBP OFF)
set(SDLIMAGE_XCF OFF)
set(SDLIMAGE_XPM OFF)
set(SDLIMAGE_XV OFF)
add_subdirectory(extern/SDL_image)

add_subdirectory(src)